Made namespace changes for LWCs even safer.

--- a/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
+++ b/rollup/app/lwc/rollupForceRecalculation/rollupForceRecalculation.html
@@ -187,7 +187,7 @@
       <div class="slds-m-top_small">Rollup job status: <b>{rollupStatus} for job: {jobIdToDisplay}</b></div>
     </template>
     <template if:true={error}>
-      <div class="slds-m-top_small" data-id="rollupError">There was an error performing your rollup: {error}</div>
+      <div class="slds-m-top_small" data-id="rollupError">An error occurred: {error}</div>
     </template>
   </div>
 </template>
