--- a/rollup/app/lwc/recalculateParentRollupQuickAction/recalculateParentRollupQuickAction.html
+++ b/rollup/app/lwc/recalculateParentRollupQuickAction/recalculateParentRollupQuickAction.html
@@ -1,4 +1,9 @@
 <template>
+  <template lwc:if={isExecuting}>
+    <div class="slds-is-relative">
+      <lightning-spinner style="top: -32px" size="small" variant="neutral"></lightning-spinner>
+    </div>
+  </template>
   <c-recalculate-parent-rollup-flexipage
     class="slds-hide"
     record-id={fetchedRecordId}
